Simplify and fix alignment of status bar icons
Simplify how the status bar icons are being generated, bringing them
inline with how other status bar "widgets" are using similar icons.

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -152,9 +152,8 @@ atom-text-editor.editor .linter-highlight, .linter-highlight {
   a {
     padding: 2px;
   }
-  span.icon::before {
+  a::before {
     font-size: 12px;
-    vertical-align: middle;
   }
   &.hide-config, &.hide-pane {
     display: none;
